--- a/index.html
+++ b/index.html
@@ -187,12 +187,18 @@ async function submitFacultyFeedback() {
   completedFaculties.push(facultyName);
 
   try {
-    await fetch("https://script.google.com/macros/s/AKfycbwY3GPvcGEW63oaeQ_oVRo3fXZGxxBDe_sVAZ-tJP_hb3-lfUzwq-WqRW7PRRq9Cgag/exec", {
+    const response = await fetch("YOUR_WEB_APP_URL_HERE", {
       method:"POST",
       headers:{"Content-Type":"application/json"},
-      body:JSON.stringify([row])
+      body: JSON.stringify([row])
     });
-  } catch(err){console.error("Error:",err); alert("Error saving feedback."); return;}
+    const result = await response.json();
+    if(result.result !== "success") throw new Error(result.message);
+  } catch(err){
+    console.error("Error:",err);
+    alert("Error saving feedback: "+err.message);
+    return;
+  }
 
   if(completedFaculties.length >= faculties.length){showPage("page4");} 
   else{showFacultySelection();}
@@ -200,3 +206,4 @@ async function submitFacultyFeedback() {
 </script>
 </body>
 </html>
+
