--- a/index.html
+++ b/index.html
@@ -113,13 +113,25 @@ function validatePage1(){
   let reg=document.getElementById("regNumber").value.trim();
   let email=document.getElementById("email").value.trim();
   let mob=document.getElementById("mobile").value.trim();
-  if(!name||!reg||!email||!mob){alert("All fields required");return;}
-  if(!/^[A-Za-z]{3}[0-9]{7}$/.test(reg)){alert("Registration No. must be 3 letters + 7 digits");return;}
-  if(!/\S+@\S+\.\S+/.test(email)){alert("Invalid Email");return;}
-  if(!/^\d{10}$/.test(mob)){alert("Mobile must be 10 digits");return;}
+
+  console.log("Validating:", {name, reg, email, mob}); // debug log
+
+  if(!name||!reg||!email||!mob){
+    alert("All fields required");return;
+  }
+  if(!/^[A-Za-z]{3}[0-9]{7}$/.test(reg)){
+    alert("Registration No. must be 3 letters + 7 digits (e.g. AAA1234567)");return;
+  }
+  if(!/\S+@\S+\.\S+/.test(email)){
+    alert("Invalid Email format");return;
+  }
+  if(!/^\d{10}$/.test(mob)){
+    alert("Mobile must be 10 digits only");return;
+  }
+
+  console.log("All validations passed ✅");
   showFacultySelection();
 }
-
 function showFacultySelection(){
   showPage("page2");
   const grid=document.getElementById("facultyGrid");grid.innerHTML="";
@@ -212,6 +224,7 @@ try {
 </script>
 </body>
 </html>
+
 
 
 
